--- a/styles/global.css
+++ b/styles/global.css
@@ -48,11 +48,11 @@ p {
 }
 
 a {
-  @apply text-sky-500 dark:text-sky-300 no-underline;
+  @apply text-cyan-500 dark:text-cyan-300 no-underline;
 }
 
 a:hover {
-  @apply text-sky-700  dark:text-sky-500 underline;
+  @apply text-cyan-700  dark:text-cyan-500 underline;
 }
 
 input:where([type='text']),
